--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protobuf = { version = "2", features = ["with-bytes"]  }
+prost = "0.5.0"
+ bytes = "0.4.12"
+# Only necessary if using Protobuf well-known types:
+prost-types = "0.5.0"
